--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -35,7 +35,6 @@
   border: 0;
   color: var(--secondary-text);
   cursor: pointer;
-  /* padding: 12px 0 12px 32px;*/
   padding: 12px 0;
   position: relative;
   text-decoration: none;
@@ -49,17 +48,19 @@
   color: var(--text-color);
 }
 
+/*
 .menu__item_unactive {
   color: var(--secondary-text);
-}
+}*/
 
-.icon__ {
+
+/*.icon__ {
   background-image: url('../../images/burger-icon.svg');
 }
 
 .menu__item_type_burger {
   background-image: url('../../images/burger-icon.svg');
-}
+}*/
 
 .logo {
   position: absolute;
@@ -110,7 +111,7 @@
   top: 0;
   left: 0;
   min-height: 100vh;
-  z-index: 2;
+  z-index: 22;
   opacity: 0;
   transition: visibility 0.6s, opacity 0.6s ease-in-out;
 }
