--- a/src/pages/profile/orders/orders.module.css
+++ b/src/pages/profile/orders/orders.module.css
@@ -91,3 +91,10 @@
     display: block;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 0 12px;
+    box-sizing: border-box;
+  }
+}
