--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -24,3 +24,11 @@
     align-items: flex-start;
   }
 }
+
+
+@media screen and (max-width: 768px) {
+  .container {
+   padding: 0 12px;
+   box-sizing: border-box;
+  }
+}
